@@ -2,9 +2,29 @@ package com.jentsch.mapping;
 
 import co.elastic.clients.elasticsearch._types.mapping.*;
 
+import java.util.HashMap;
 import java.util.Map;
 //https://github.com/apache/james-project/blob/master/mailbox/opensearch/src/main/java/org/apache/james/mailbox/opensearch/MailboxMappingFactory.java
 public class MailboxMappingFactory2 {
+    public static final String CASE_INSENSITIVE = "case_insensitive";
+    public static final String KEEP_MAIL_AND_URL = "keep_mail_and_url";
+    public static final String BOOLEAN = "boolean";
+    public static final String TYPE = "type";
+    public static final String LONG = "long";
+    public static final String DOUBLE = "double";
+    public static final String KEYWORD = "keyword";
+    public static final String PROPERTIES = "properties";
+    public static final String ROUTING = "_routing";
+    public static final String REQUIRED = "required";
+    public static final String DATE = "date";
+    public static final String FORMAT = "format";
+    public static final String NESTED = "nested";
+    public static final String FIELDS = "fields";
+    public static final String RAW = "raw";
+    public static final String ANALYZER = "analyzer";
+    public static final String TOKENIZER = "tokenizer";
+    public static final String NORMALIZER = "normalizer";
+    public static final String SEARCH_ANALYZER = "search_analyzer";
     private static final String STANDARD = "standard";
     private static final String SIMPLE = "simple";
 
@@ -19,67 +39,63 @@ public class MailboxMappingFactory2 {
     }
 
     private static Map<String, Property> generateProperties() {
-        return new ImmutableMap.Builder<String, Property>()
-                .put(JsonMessageConstants.MESSAGE_ID, new Property.Builder()
-                        .keyword(new KeywordProperty.Builder().store(true).build())
-                        .build())
-                .put(JsonMessageConstants.THREAD_ID, new Property.Builder()
-                        .keyword(new KeywordProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.UID, new Property.Builder()
-                        .long_(new LongNumberProperty.Builder().store(true).build())
-                        .build())
-                .put(JsonMessageConstants.MODSEQ, new Property.Builder()
-                        .long_(new LongNumberProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.SIZE, new Property.Builder()
-                        .long_(new LongNumberProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.IS_ANSWERED, new Property.Builder()
+        return new HashMap<String, Property>() {
+            {
+                put(JsonMessageConstants.MESSAGE_ID, new Property.Builder()
+                        .keyword(new KeywordProperty.Builder().store(true).build()).build());
+                put(JsonMessageConstants.MESSAGE_ID, new Property.Builder()
+                        .keyword(new KeywordProperty.Builder().store(true).build()).build());
+                put(JsonMessageConstants.THREAD_ID, new Property.Builder()
+                        .keyword(new KeywordProperty.Builder().build()).build());
+                put(JsonMessageConstants.UID, new Property.Builder()
+                        .long_(new LongNumberProperty.Builder().store(true).build()).build());
+                put(JsonMessageConstants.MODSEQ, new Property.Builder()
+                        .long_(new LongNumberProperty.Builder().build()).build());
+                put(JsonMessageConstants.SIZE, new Property.Builder()
+                        .long_(new LongNumberProperty.Builder().build()).build());
+                put(JsonMessageConstants.IS_ANSWERED, new Property.Builder()
+                        .boolean_(new BooleanProperty.Builder().build()).build());
+                put(JsonMessageConstants.IS_DELETED, new Property.Builder()
+                        .boolean_(new BooleanProperty.Builder().build()).build());
+                put(JsonMessageConstants.IS_DRAFT, new Property.Builder()
                         .boolean_(new BooleanProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.IS_DELETED, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.IS_FLAGGED, new Property.Builder()
                         .boolean_(new BooleanProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.IS_DRAFT, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.IS_RECENT, new Property.Builder()
                         .boolean_(new BooleanProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.IS_FLAGGED, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.IS_UNREAD, new Property.Builder()
                         .boolean_(new BooleanProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.IS_RECENT, new Property.Builder()
-                        .boolean_(new BooleanProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.IS_UNREAD, new Property.Builder()
-                        .boolean_(new BooleanProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.DATE, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.DATE, new Property.Builder()
                         .date(new DateProperty.Builder()
                                 .format("uuuu-MM-dd'T'HH:mm:ssX||uuuu-MM-dd'T'HH:mm:ssXXX||uuuu-MM-dd'T'HH:mm:ssXXXXX")
                                 .build())
-                        .build())
-                .put(JsonMessageConstants.SENT_DATE, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.SENT_DATE, new Property.Builder()
                         .date(new DateProperty.Builder()
                                 .format("uuuu-MM-dd'T'HH:mm:ssX||uuuu-MM-dd'T'HH:mm:ssXXX||uuuu-MM-dd'T'HH:mm:ssXXXXX")
                                 .build())
-                        .build())
-                .put(JsonMessageConstants.SAVE_DATE, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.SAVE_DATE, new Property.Builder()
                         .date(new DateProperty.Builder()
                                 .format("uuuu-MM-dd'T'HH:mm:ssX||uuuu-MM-dd'T'HH:mm:ssXXX||uuuu-MM-dd'T'HH:mm:ssXXXXX")
                                 .build())
-                        .build())
-                .put(JsonMessageConstants.USER_FLAGS, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.USER_FLAGS, new Property.Builder()
                         .keyword(new KeywordProperty.Builder().normalizer(CASE_INSENSITIVE).build())
-                        .build())
-                .put(JsonMessageConstants.MEDIA_TYPE, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.MEDIA_TYPE, new Property.Builder()
                         .keyword(new KeywordProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.SUBTYPE, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.SUBTYPE, new Property.Builder()
                         .keyword(new KeywordProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.FROM, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.FROM, new Property.Builder()
                         .object(new ObjectProperty.Builder()
-                                .properties(ImmutableMap.of(
+                                .properties(Map.of(
                                         JsonMessageConstants.EMailer.NAME, new Property.Builder()
                                                 .text(new TextProperty.Builder().analyzer(KEEP_MAIL_AND_URL).build())
                                                 .build(),
@@ -100,10 +116,10 @@ public class MailboxMappingFactory2 {
                                                 .build()
                                 ))
                                 .build())
-                        .build())
-                .put(JsonMessageConstants.HEADERS, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.HEADERS, new Property.Builder()
                         .nested(new NestedProperty.Builder()
-                                .properties(ImmutableMap.of(
+                                .properties(Map.of(
                                         JsonMessageConstants.HEADER.NAME, new Property.Builder()
                                                 .keyword(new KeywordProperty.Builder().build())
                                                 .build(),
@@ -112,18 +128,19 @@ public class MailboxMappingFactory2 {
                                                 .build()
                                 ))
                                 .build())
-                        .build())
-                .put(JsonMessageConstants.SUBJECT, new Property.Builder()
+                        .build());
+
+                put(JsonMessageConstants.SUBJECT, new Property.Builder()
                         .text(new TextProperty.Builder()
                                 .analyzer(KEEP_MAIL_AND_URL)
                                 .fields(RAW, new Property.Builder()
                                         .keyword(new KeywordProperty.Builder().normalizer(CASE_INSENSITIVE).build())
                                         .build())
                                 .build())
-                        .build())
-                .put(JsonMessageConstants.TO, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.TO, new Property.Builder()
                         .object(new ObjectProperty.Builder()
-                                .properties(ImmutableMap.of(
+                                .properties(Map.of(
                                         JsonMessageConstants.EMailer.NAME, new Property.Builder()
                                                 .text(new TextProperty.Builder().analyzer(KEEP_MAIL_AND_URL).build())
                                                 .build(),
@@ -144,10 +161,10 @@ public class MailboxMappingFactory2 {
                                                 .build()
                                 ))
                                 .build())
-                        .build())
-                .put(JsonMessageConstants.CC, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.CC, new Property.Builder()
                         .object(new ObjectProperty.Builder()
-                                .properties(ImmutableMap.of(
+                                .properties(Map.of(
                                         JsonMessageConstants.EMailer.NAME, new Property.Builder()
                                                 .text(new TextProperty.Builder().analyzer(KEEP_MAIL_AND_URL).build())
                                                 .build(),
@@ -168,10 +185,10 @@ public class MailboxMappingFactory2 {
                                                 .build()
                                 ))
                                 .build())
-                        .build())
-                .put(JsonMessageConstants.BCC, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.BCC, new Property.Builder()
                         .object(new ObjectProperty.Builder()
-                                .properties(ImmutableMap.of(
+                                .properties(Map.of(
                                         JsonMessageConstants.EMailer.NAME, new Property.Builder()
                                                 .text(new TextProperty.Builder().analyzer(KEEP_MAIL_AND_URL).build())
                                                 .build(),
@@ -192,25 +209,25 @@ public class MailboxMappingFactory2 {
                                                 .build()
                                 ))
                                 .build())
-                        .build())
-                .put(JsonMessageConstants.MAILBOX_ID, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.MAILBOX_ID, new Property.Builder()
                         .keyword(new KeywordProperty.Builder().store(true).build())
-                        .build())
-                .put(JsonMessageConstants.MIME_MESSAGE_ID, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.MIME_MESSAGE_ID, new Property.Builder()
                         .keyword(new KeywordProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.TEXT_BODY, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.TEXT_BODY, new Property.Builder()
                         .text(new TextProperty.Builder().analyzer(STANDARD).build())
-                        .build())
-                .put(JsonMessageConstants.HTML_BODY, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.HTML_BODY, new Property.Builder()
                         .text(new TextProperty.Builder().analyzer(STANDARD).build())
-                        .build())
-                .put(JsonMessageConstants.HAS_ATTACHMENT, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.HAS_ATTACHMENT, new Property.Builder()
                         .boolean_(new BooleanProperty.Builder().build())
-                        .build())
-                .put(JsonMessageConstants.ATTACHMENTS, new Property.Builder()
+                        .build());
+                put(JsonMessageConstants.ATTACHMENTS, new Property.Builder()
                         .object(new ObjectProperty.Builder()
-                                .properties(ImmutableMap.of(
+                                .properties(Map.of(
                                         JsonMessageConstants.Attachment.FILENAME, new Property.Builder()
                                                 .text(new TextProperty.Builder().analyzer(STANDARD).build())
                                                 .build(),
@@ -231,7 +248,8 @@ public class MailboxMappingFactory2 {
                                                 .build()
                                 ))
                                 .build())
-                        .build())
-                .build();
+                        .build());
+            }
+        };
     }
 }
